k8s/ollama.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ollama
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ollama
  template:
    metadata:
      labels:
        app: ollama
    spec:
      containers:
        - name: ollama
          image: us-west1-docker.pkg.dev/furnitureflip-ollama-gcp/furnitureflip/ollama:1
          ports:
            - containerPort: 11434
          command: ["ollama"]
          args: ["serve"]
          volumeMounts:
            - name: ollama-storage
              mountPath: /root/.ollama
      volumes:
        - name: ollama-storage
          persistentVolumeClaim:
            claimName: ollama-pvc
