k8s/frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: furnitureflip-frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: furnitureflip-frontend
  template:
    metadata:
      labels:
        app: furnitureflip-frontend
    spec:
      containers:
        - name: frontend
          image: us-west1-docker.pkg.dev/furnitureflip-ollama-gcp/furnitureflip/furnitureflip-frontend:NEW
          ports:
            - containerPort: 8501
---
apiVersion: v1
kind: Service
metadata:
  name: furnitureflip-web
spec:
  selector:
    app: furnitureflip-frontend
  type: LoadBalancer
  ports:
    - name: http
      port: 80
      targetPort: 8501
